Working on masonry layout

--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,5 +1,90 @@
 <div class="container">
+    
     <div class="center-align">
         <img id="finterest" class="responsive-img" src="/public/img/finterest.png" />
     </div>
+    
+    <div class="grid">
+      
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_DSC_3274.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_0499.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_1166.jpg" alt="" />
+       </div>
+      
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_1275.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img"  src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_3130.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_9998.jpg" alt="" />
+       </div>
+      
+       <div class="grid-item">
+         <img class="responsive-img"  src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_3186.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_4828.jpg" alt="" />
+       </div>
+      
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_8687.jpg" alt="" />
+       </div>
+      
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_9542.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img"  src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_9857.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_DSC_3274.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_0499.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_1166.jpg" alt="" />
+       </div>
+      
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_1275.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img"  src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_3130.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_9998.jpg" alt="" />
+       </div>
+      
+       <div class="grid-item">
+         <img class="responsive-img"  src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_3186.jpg" alt="" />
+       </div>
+    
+       <div class="grid-item">
+         <img class="responsive-img" src="http://netdna.webdesignerdepot.com/uploads/2013/11/picjumbo.com_IMG_4828.jpg" alt="" />
+       </div>
+     
+    </div>
+    
+    TRY THIS NEXT
+    http://ignitersworld.com/lab/angulargrid/index.html#documentation
+    
 </div>
