--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,23 +36,42 @@ main {
 
 /*MASONRY*/
 
-.grid {
-    width: 100%;
+
+.grid li {
+  display: inline-block;
+  width: 200px;
+  height: auto;
+  min-height: 100px;
 }
 
+/*
 .grid-item { 
   width: 200px; 
   line-height: 0px;
   font-size: 0px;
 }
-
-.grid-item .responsive-img {
-  width: 100%;
-}
+*/
 
 @media only screen and (max-width : 599px),
 only screen and (max-device-width : 599px){
- .grid-item {
+ .grid li {
  width: 100%;
  }
 }
+
+.title-hover {
+  background: linear-gradient( rgba(30,136,229,0.70), rgba(30,136,229,0.70) );
+  width: 100%;
+  max-height: 100%;
+  overflow: scroll;
+}
+
+.card {
+  margin-bottom: -10px;
+}
+
+.card .card-reveal {
+  background: linear-gradient( rgba(255,255,255,0.80), rgba(255,255,255,0.80) );
+  height: 101%;
+}
+
