--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -8,12 +8,12 @@
     <li ng-repeat="item in items">
         <div class="card">
             <div class="card-image" ng-mouseenter="titleShow = true" ng-mouseleave="titleShow = false" ng-click="titleShow = false">
-                <img class="activator" ng-src="{{item.url}}">
-                <span class="card-title title-hover" ng-show="titleShow">{{ item.name }}</span>
+                <img class="activator" ng-src="{{item.img_url}}">
+                <span class="card-title title-hover" ng-show="titleShow">{{ item.img_title }}</span>
             </div>
             <div class="card-reveal">
               <span class="card-title grey-text text-darken-4"><i class="fa fa-times"></i></span>
-              <p>{{ item.name }}.</p>
+              <p>{{ item.img_title }}.</p>
             </div>
         </div>
     </li>
