Updated design to add nav for logged in users

--- a/public/app/views/user_profile.html
+++ b/public/app/views/user_profile.html
@@ -1,6 +1,6 @@
 <div class="container">
     
-    <div class="col m12">
+    <div class="col m12 center-align">
     <h1>Profile.</h1>
     <p class="flow-text">Welcome {{user.username}}, the waters are warm!</p>
     </div>
