--- a/public/app/views/user_myimg.html
+++ b/public/app/views/user_myimg.html
@@ -1,19 +1,11 @@
 
-<div class="col m12 center-align">
+<div class="container center-align">
     <h1>My Images.</h1>
 </div>
 
-<ul class="grid" masonry="true">
-    <li ng-repeat="item in items">
-        <div class="card">
-            <div class="card-image" ng-mouseenter="titleShow = true" ng-mouseleave="titleShow = false" ng-click="titleShow = false">
-                <img class="activator" ng-src="{{item.img_url}}">
-                <span class="card-title title-hover" ng-show="titleShow">{{ item.img_title }}</span>
-            </div>
-            <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4"><i class="fa fa-times"></i></span>
-              <p>{{ item.img_title }}.</p>
-            </div>
-        </div>
-    </li>
-</ul>
+
+<div class="grid center-align">
+       
+
+ 
+</div>
