--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,7 @@ main {
 /*MASONRY*/
 
 
+
 .grid li {
   display: inline-block;
   width: 200px;
@@ -58,13 +59,24 @@ main {
   min-height: 100px;
 }
 
-/*
+/* testing new grid */
+
 .grid-item { 
   width: 200px; 
-  line-height: 0px;
-  font-size: 0px;
 }
-*/
+
+.grid-item .responsive-img {
+  width: 100%;
+}
+
+@media only screen and (max-width : 599px),
+only screen and (max-device-width : 599px){
+ .grid-item {
+ width: 100%;
+ }
+}
+
+/* end of testing new grid */
 
 @media only screen and (max-width : 599px),
 only screen and (max-device-width : 599px){
