Grid with cards working for my images

--- a/public/app/views/user_myimg.html
+++ b/public/app/views/user_myimg.html
@@ -5,7 +5,16 @@
 
 
 <div class="grid center-align">
-       
-
- 
+    <div class="grid-item" ng-repeat="item in items">
+        <div class="card">
+            <div class="card-image" ng-mouseenter="titleShow = true" ng-mouseleave="titleShow = false" ng-click="titleShow = false">
+                <img class="activator" ng-src="{{item.img_url}}">
+                <span class="card-title title-hover" ng-show="titleShow">{{ item.img_title }}</span>
+            </div>
+            <div class="card-reveal">
+              <span class="card-title grey-text text-darken-4"><i class="fa fa-times"></i></span>
+              <p>{{ item.img_title }}.</p>
+            </div>
+        </div>
+    </div>
 </div>
