--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,11 +1,11 @@
 
     
-<div class="center-align">
+<div class="container center-align">
     <img id="finterest" class="responsive-img" src="/public/img/finterest.png" />
 </div>
 
-<ul class="grid" masonry="true">
-    <li ng-repeat="item in items">
+<div class="grid center-align">
+    <div class="grid-item" ng-repeat="item in items">
         <div class="card">
             <div class="card-image" ng-mouseenter="titleShow = true" ng-mouseleave="titleShow = false" ng-click="titleShow = false">
                 <img class="activator" ng-src="{{item.img_url}}">
@@ -16,7 +16,7 @@
               <p>{{ item.img_title }}.</p>
             </div>
         </div>
-    </li>
-</ul>
+    </div>
+</div>
 
     
