Added loading to all images and my images pages

--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -1,7 +1,13 @@
 
-    
 <div class="container center-align">
     <img id="finterest" class="responsive-img" src="/public/img/finterest.png" />
+</div>
+
+<div class="container center-align" ng-if="loading">
+    <h3>Loading...</h3>
+  <div class="progress blue lighten-2">
+      <div class="indeterminate blue darken-2"></div>
+  </div>
 </div>
 
 <div class="grid center-align">
