--- a/public/app/views/user_myimg.html
+++ b/public/app/views/user_myimg.html
@@ -3,6 +3,13 @@
     <h1>My Images.</h1>
 </div>
 
+<div class="container center-align" ng-if="loading">
+    <h3>Loading...</h3>
+  <div class="progress blue lighten-2">
+      <div class="indeterminate blue darken-2"></div>
+  </div>
+</div>
+
 
 <div class="grid center-align">
     <div class="grid-item" ng-repeat="item in items">
