--- a/public/app/views/user_myimg.html
+++ b/public/app/views/user_myimg.html
@@ -19,9 +19,23 @@
                 <span class="card-title title-hover" ng-show="titleShow">{{ item.img_title }}</span>
             </div>
             <div class="card-reveal">
-              <span class="card-title grey-text text-darken-4"><i class="fa fa-times"></i></span>
-              <p>{{ item.img_title }}.</p>
+              <span class="card-title blue-grey-text text-darken-4"><i class="fa fa-times"></i></span>
+              <p class="blue-grey-text text-darken-4">{{ item.img_title }}.</p>
+              <button class="waves-effect waves-light btn modal-trigger blue-grey" ng-click="deleteModal(item.img_url)">Delete</button>
             </div>
         </div>
     </div>
 </div>
+
+<!-- Modal Structure -->
+<div id="modalDelete" class="modal blue">
+<div class="modal-content center-align">
+  <h4>Do you want to delete this image?</h4>
+  <img class="responsive-img" ng-src="{{deleteRequestID}}">
+</div>
+<div class="modal-footer blue darken-2">
+  <button class="modal-action modal-close btn waves-effect waves-light blue">Keep</button>
+  <button ng-click="deleteImage(deleteRequestID)" class="modal-action modal-close btn waves-effect waves-light red">Delete</button>
+</div>
+</div>
+<!-- Modal Structure End -->
