--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,11 @@ main {
   margin: 10px;
 }
 
+.modal .modal-footer .btn {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 /*IMAGES*/
 
 
@@ -63,7 +68,7 @@ main {
 
 .grid-item { 
   display: inline-block;
-  width: 200px;
+  width: 300px;
   height: auto;
 }
 
