Updated profile page

--- a/public/app/views/user_profile.html
+++ b/public/app/views/user_profile.html
@@ -20,7 +20,7 @@
                 
                 <div ng-if="!user.twitter">
                     <p>
-                        <a href="/auth/twitter" class="waves-effect waves-light btn blue darken-2"><i class="fa fa-twitter"></i> Connect Twitter</a>
+                        <a href="/auth/twitter" class="waves-effect waves-light btn blue lighten-1"><i class="fa fa-twitter"></i> Connect Twitter</a>
                     </p>
                 </div>
                 </div>
@@ -37,7 +37,7 @@
                 
                 <div ng-if="!user.facebook">
                     <p>
-                        <a href="/auth/facebook" class="waves-effect waves-light btn blue darken-2"><i class="fa fa-facebook"></i> Connect Facebook</a>
+                        <a href="/auth/facebook" class="waves-effect waves-light btn blue darken-1"><i class="fa fa-facebook"></i> Connect Facebook</a>
                     </p>
                 </div>
                 </div>
@@ -50,7 +50,7 @@
         <div ng-if="user.activity[0]">
             <div class="list-group">
               <li class="list-group-item list-group-item-default" ng-repeat="activity in user.activity">
-                  You {{activity.type}}: <b>{{ activity.book }}</b>, on {{ activity.date }}.
+                  You {{activity.type}}: <b>{{ activity.title }}</b>, on {{ activity.date }}.
               </li>
             </div>
         </div>
@@ -63,8 +63,8 @@
     
     <div class="col m12">
         <h3>Done?</h3>
-        <div class="card grey center-align">
-          <button ng-click="userLogout()" class="btn btn-default btn-lg"><i class="fa fa-sign-out"></i> Log Out</button>
+        <div class="blue lighten-1 center-align">
+          <button ng-click="userLogout()" class="waves-effect waves-light btn btn-mg blue lighten-2"><i class="fa fa-sign-out"></i> Log Out</button>
         </div>
     </div>
     
