--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -14,7 +14,7 @@
     <div class="grid-item" ng-repeat="item in items">
         <div class="card">
             <div class="card-image" ng-mouseenter="titleShow = true" ng-mouseleave="titleShow = false" ng-click="titleShow = false">
-                <img class="activator" ng-src="{{item.img_url}}">
+                <img ng-click="showModal(item.img_url)" ng-src="{{item.img_url}}">
                 <span class="card-title title-hover" ng-show="titleShow">{{ item.img_title }}</span>
             </div>
             <div class="card-reveal">
@@ -25,4 +25,14 @@
     </div>
 </div>
 
+<!-- Modal Structure -->
+<div id="modalImage" class="modal blue">
+<div class="modal-content center-align">
+  <img class="responsive-img" ng-src="{{imgShowID}}">
+</div>
+<div class="modal-footer blue darken-2">
+  <button class="modal-action modal-close btn waves-effect waves-light blue">Close</button>
+</div>
+</div>
+<!-- Modal Structure End -->
     
