--- a/public/app/views/user_myimg.html
+++ b/public/app/views/user_myimg.html
@@ -16,7 +16,7 @@
         <div class="card">
             <div class="card-image" ng-mouseenter="titleShow = true" ng-mouseleave="titleShow = false" ng-click="titleShow = false">
                 <img class="activator" ng-src="{{item.img_url}}">
-                <span class="card-title title-hover" ng-show="titleShow">{{ item.img_title }}</span>
+                <span class="activator card-title title-hover" ng-show="titleShow">{{ item.img_title }}</span>
             </div>
             <div class="card-reveal">
               <span class="card-title blue-grey-text text-darken-4"><i class="fa fa-times"></i></span>
