Added second masonry layout load to fix bug sometimes on first layout load

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,6 +86,7 @@ only screen and (max-device-width : 599px){
 
 .card .card-image img {
   border-radius: 0px;
+  min-width: 200px;
 }
 
 .card .card-reveal {
